# spooty

./: .env  .gitignore  Home.py  Makefile  README.dev  README.md  app.py  data.feather  exploring_private_setting.ipynb  logging.conf  multiapp.py  pyproject.toml  requirements.txt  utils.py  🏠_Home.py
.streamlit/: secrets.toml
_archive/: sample.py
apps/: genre.py
pages/: 1_Backlog_Sampler.py  2_Playlist_Privacy.py
src/spooty/: Home.py
src/spooty/pages/: 1_Backlog_Sampler.py  2_Playlist_Privacy.py  3_Make_Binaural_Beats_Playlist.py  4_Playlist_Sync.py
src/spooty/utils/: logging_setup.py  spotify_helpers.py
src/tests/: test_logging.py
tabs/: genre_finder.py
utils/: spotify_helpers.py
