[project]
name = ""
version = ""
description = ""
authors = [
    {name = "JordieB", email = "jordie.r.belle@gmail.com"},
]
dependencies = [
    "notebook>=6.5.3",
    "pandas>=1.5.3",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "streamlit>=1.19.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]
